# stm32-freertos-buildchain

./: .gitmodules  CMakeLists.txt  FreeRTOSConfig.h  README.md  stm32f103c8.ld  toolchain.cmake
cmake/: freertos.cmake  libopencm3.cmake
include/: freertos.cmake  libopencm3.cmake
src/: CMakeLists.txt  main.c  opencm3.c  rtos.c  startup_stm32f103c8.s
